@@ -1,5 +1,8 @@
 Version 0.9.32dev (?? ??? 01)
   - Initial LDAP support.
+  - Fixed bug 438980: Oracle SQL syntax error in tables-oracle.sql
+  - Fixed bug: When participant list display is disabled, events
+    were not being created properly.
 Version 0.9.31 (02 Jul 01)
   - Added Swedish translation.
   - Updated Dutch translation.
